--- a/canvas.html
+++ b/canvas.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <script src="graph_browser.js"></script>
+    <script></script>
+  </head>
   <body>
     <div id="canvas" style="width:40px; height:40px;">
     </div>
