--- a/canvas.html
+++ b/canvas.html
@@ -18,7 +18,7 @@
       "x":7
     }
   };
-  var b = new graph("canvas", a, [43], "bar");
-  b.bar();
+  var b = new graph("canvas", a, [43], "hist");
+  b.hist();
   </script>
 </html>
