--- a/canvas.html
+++ b/canvas.html
@@ -18,8 +18,8 @@
       "x":7
     }
   };
-  var b = new graph("canvas", a, [43], "hist");
-  //b.hist();
+  var b = new graph("canvas", a, [43], "pie");
+  b.draw();
   var c={
     "luck":{
       "x":10
