fix closest point calculation

--- a/canvas.html
+++ b/canvas.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="graph_browser.js"></script>
+    <script src="graph.js"></script>
   </head>
   <body>
     <div id="canvas" style="width:400px; height:400px;">
